@@ -1,4 +1,4 @@
-use Test::More tests => 11;
+use Test::More tests => 15;
 
 BEGIN {
     use_ok('Graphics::Primitive::Insets');
@@ -27,8 +27,14 @@ ok($obj->not_equal_to($obj2), 'not equal');
 $obj2->right(4);
 ok($obj->equal_to($obj2), 'equal');
 
-$obj->zero();
-cmp_ok($obj->top(), '==', 0, 'zero top');
-cmp_ok($obj->left(), '==', 0, 'zero left');
-cmp_ok($obj->bottom(), '==', 0, 'zero bottom');
-cmp_ok($obj->right(), '==', 0, 'zero right');
+$obj->zero;
+cmp_ok($obj->top, '==', 0, 'zero top');
+cmp_ok($obj->left, '==', 0, 'zero left');
+cmp_ok($obj->bottom, '==', 0, 'zero bottom');
+cmp_ok($obj->right, '==', 0, 'zero right');
+
+$obj->width(4);
+cmp_ok($obj->top, '==', 4, 'width, top');
+cmp_ok($obj->left, '==', 4, 'width, left');
+cmp_ok($obj->bottom, '==', 4, 'width, bottom');
+cmp_ok($obj->right, '==', 4, 'width, right');
